src/mermaid/ascii/gitgraph/snapshots/veol__mermaid__ascii__gitgraph__render__tests__render_ascii_charset.snap
---
source: src/mermaid/ascii/gitgraph/render.rs
assertion_line: 567
expression: render_ascii(src)
---
main:       *-----*
                 /
                /
feature:       *
