src/mermaid/ascii/gitgraph/snapshots/veol__mermaid__ascii__gitgraph__render__tests__render_branch_and_commits.snap
---
source: src/mermaid/ascii/gitgraph/render.rs
assertion_line: 525
expression: render(src)
---
main:       ●


feature:       ●──●
