src/mermaid/ascii/gitgraph/snapshots/veol__mermaid__ascii__gitgraph__render__tests__render_branch_checkout_merge.snap
---
source: src/mermaid/ascii/gitgraph/render.rs
assertion_line: 531
expression: render(src)
---
main:       ●────────●
                    ╱
                   ╱
feature:       ●──●
