src/mermaid/ascii/gitgraph/snapshots/veol__mermaid__ascii__gitgraph__render__tests__render_cherrypick.snap
---
source: src/mermaid/ascii/gitgraph/render.rs
assertion_line: 549
expression: render(src)
---
           [abc]
main:    ●──●
