src/mermaid/ascii/gitgraph/snapshots/veol__mermaid__ascii__gitgraph__render__tests__render_highlight_commit.snap
---
source: src/mermaid/ascii/gitgraph/render.rs
assertion_line: 537
expression: render(src)
---
main:    ●──◉
