src/mermaid/ascii/gitgraph/snapshots/veol__mermaid__ascii__gitgraph__render__tests__render_linear_commits_main_only.snap
---
source: src/mermaid/ascii/gitgraph/render.rs
assertion_line: 507
expression: render(src)
---
main:    ●──●──●
