src/mermaid/ascii/gitgraph/snapshots/veol__mermaid__ascii__gitgraph__render__tests__render_orientation_td.snap
---
source: src/mermaid/ascii/gitgraph/render.rs
assertion_line: 561
expression: render(src)
---
  main    feature

    ●
    │
    │
    │        ●
    │     ╱
    │  ╱
    ●
