src/mermaid/ascii/gitgraph/snapshots/veol__mermaid__ascii__gitgraph__render__tests__render_reverse_commit.snap
---
source: src/mermaid/ascii/gitgraph/render.rs
assertion_line: 543
expression: render(src)
---
main:    ●──◐
