src/mermaid/ascii/gitgraph/snapshots/veol__mermaid__ascii__gitgraph__render__tests__render_two_branches.snap
---
source: src/mermaid/ascii/gitgraph/render.rs
assertion_line: 555
expression: render(src)
---
main:       ●


feature:       ●


hotfix:           ●
