src/mermaid/ascii/gitgraph/snapshots/veol__mermaid__ascii__gitgraph__render__tests__render_with_id_labels.snap
---
source: src/mermaid/ascii/gitgraph/render.rs
assertion_line: 513
expression: render(src)
---
main:    ●──●
