src/mermaid/ascii/gitgraph/snapshots/veol__mermaid__ascii__gitgraph__render__tests__render_with_tag.snap
---
source: src/mermaid/ascii/gitgraph/render.rs
assertion_line: 519
expression: render(src)
---
           (v1)
main:    ●──●
